Added the ability to add users to a channel.
With Unit Tests